--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,12 +25,6 @@ body {
   position: relative;
 }
 
-.top-right {
-  position: absolute;
-  right: 10px;
-  top: 18px;
-}
-
 .content {
   text-align: center;
 }
@@ -38,11 +32,15 @@ body {
 .links > a {
   color: #636b6f;
   padding: 0 25px;
-  font-size: 13px;
+  font-size: 20px;
   font-weight: 600;
   letter-spacing: 0.1rem;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+p {
+  font-size:20px;
 }
 
 .m-b-md {
